<resources>
    <string name="app_name">Data Mahasiswa</string>
    <string name="action_settings">Settings</string>
    <string name="simpan">Simpan</string>
    <string name="back">Back</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="no_hp">No Hp</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="exit">Exit</string>
    <string name="tambah">Tambah</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="title_activity_content">Data Mahasiswa</string>
    <string name="title_activity_baru">Tambah Data</string>
    <string name="title_activity_lihat">Tampilkan Data</string>
    <string name="title_activity_ubah">Edit Data</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="keluar">Keluar</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="jurusan">Jurusan</string>
</resources>
